# jROOT

./: .gitignore  CMakeLists.txt  setup.sh
LowMassHinv/: CMakeLists.txt
LowMassHinv/Root/: HinvComb.cxx  emuCR.cxx  emuMC.cxx  log  readMC.cxx  readTree.cxx
LowMassHinv/include/LowMassHinv/: HinvComb.h  emuAna.h  emuCR.h  emuMC.h  readMC.h  readTree.h  regions.h
LowMassHinv/marco/: TMVAClassification_BDTG.weights.xml
LowMassHinv/utils/: HinvComb.cxx  LM_ZZ.cxx  MC.root  a.root  compare_data.cxx  compare_version.cxx  emuCR.cxx  emuMC.cxx  emuMCROOT.cxx  emuMCROOT115.cxx  log  processTheo.cxx  readMC.cxx
VBSZZ/: CMakeLists.txt
VBSZZ/Root/: SlimTree.cxx  VBS_2lXR.cxx  VBS_3lCR.cxx  VBS_CutFlow.cxx  readTree.cxx
VBSZZ/include/VBSZZ/: SlimTree.h  VBS_2lXR.h  VBS_3lCR.h  VBS_CutFlow.h  readTree.h  regions.h
VBSZZ/marco/: VBS_BDTG.weights.xml
VBSZZ/utils/: 2lXR.cxx  3lCR.cxx  CutFlow.cxx  CutOneNtuple.cxx  SlimTree.cxx  a.root  processTheo.cxx  readTree.cxx
ZZ_theo/: ._ggZZ_theo.py  ggZZ-rel75-input.root  ggZZ-rel75.root  ggZZ_theo.py  qqZZ-rel75-input.root  qqZZ-rel75.root  qqZZ_theo.py
emu/: emu-rel75-input.root  input.py
source/: CMakeLists.txt
source/HZZ/: CMakeLists.txt
source/HZZ/HZZ/: Accept_Michiel_Tree.h  Acceptance.h  Acceptance_jun.h  Acceptance_truth.h  HM_ZZ.h  HM_emuROOT.h  LM_Michiel_Tree.h  LM_ZZ.h  LM_emuCR.h  LM_emuROOT.h  emuAna.h  emuROOT.h  emuSYST.h  regions.h
source/HZZ/Root/: Accept_Michiel_Tree.cxx  Acceptance.cxx  Acceptance_jun.cxx  Acceptance_truth.cxx  HM_ZZ.cxx  HM_emuROOT.cxx  LM_Michiel_Tree.cxx  LM_ZZ.cxx  LM_emuCR.cxx  LM_emuROOT.cxx  \  emuROOT.cxx  emuSYST.cxx
source/HZZ/marco/: TMVAClassification_BDTG.class.C  TMVAClassification_BDTG.weights.xml
source/HZZ/scripts/: LM_ZZ_Systematic.py  a.py  ggZZ-rel75-LM.root  input.py  ps.py  qqZZ-rel75-LM.root  theo.py  tmp.py
source/HZZ/utils/: HM_ZZ.cxx  HM_emuData.cxx  HM_emuMC.cxx  LM_Michiel_ZZ.cxx  LM_ZZ.cxx  LM_emuCR.cxx  LM_emuData.cxx  LM_emuMC.cxx  LM_emuOther.cxx  accept_Michiel_ZZ.cxx  accept_ZZ.cxx  accept_jun.cxx  accept_truth.cxx  emuCR-Data.root  emuData.cxx  emuMC.cxx  emuMCPerYear.cxx  emuOther.cxx  emuSYST.cxx  ggZZ-reco.root  ggZZ-rel75.root  ggZZ-truth.root  ggZZ.root  ggZZ_theo.py  mc16a  mc16d  mc16e  nohup.out  plot.py  plots.cxx  qqZZ-reco.root  qqZZ-rel75.root  qqZZ-truth.root  qqZZ_theo.py
source/VBSZZ/: CMakeLists.txt
source/VBSZZ/Root/: C_factor.cxx  jDataDriven.cxx  jSYST.cxx  jTHEO.cxx  jTREE.cxx
source/VBSZZ/VBSZZ/: C_factor.h  jDataDriven.h  jSYST.h  jTHEO.h  jTREE.h  regions.h
source/VBSZZ/share/: NonRes.root  WZ_down.root  WZ_up.root  ZJet.root  cEWK.363724.root  cggZZ.343233.root  cqqZZ.364254.root  data.root
source/VBSZZ/utils/: cEWK.cxx  c_factor.cxx  cggZZ.cxx  cqqZZ.cxx  hist_EWK.root  hist_qqZZ.root  list  nohup.out  rEWK.cxx  rNonRes.cxx  rNonRes_dd.cxx  rOther.cxx  rWZ.cxx  rZJet.cxx  rZZ4l.cxx  rdata.cxx  rggZZ.cxx  rqqZZ.cxx  testrun.cxx  theo.py
source/VBSZZ/utils/test/: Data_dd.root  EWK.sh  EWK_EG_RESOLUTION_ALL__1down.root  EWK_EG_RESOLUTION_ALL__1up.root  EWK_EG_SCALE_AF2__1down.root  EWK_EG_SCALE_AF2__1up.root  EWK_EG_SCALE_ALL__1down.root  EWK_EG_SCALE_ALL__1up.root  EWK_JET_EtaIntercalibration_NonClosure__1down.root  EWK_JET_EtaIntercalibration_NonClosure__1up.root  EWK_JET_GroupedNP_1__1down.root  EWK_JET_GroupedNP_1__1up.root  EWK_JET_GroupedNP_2__1down.root  EWK_JET_GroupedNP_2__1up.root  EWK_JET_GroupedNP_3__1down.root  EWK_JET_GroupedNP_3__1up.root  EWK_JET_JER_SINGLE_NP__1up.root  EWK_MET_SoftTrk_ResoPara.root  EWK_MET_SoftTrk_ResoPerp.root  EWK_MET_SoftTrk_ScaleDown.root  EWK_MET_SoftTrk_ScaleUp.root  EWK_MUON_ID__1down.root  EWK_MUON_ID__1up.root  EWK_MUON_MS__1down.root  EWK_MUON_MS__1up.root  EWK_MUON_SAGITTA_RESBIAS__1down.root  EWK_MUON_SAGITTA_RESBIAS__1up.root  EWK_MUON_SAGITTA_RHO__1down.root  EWK_MUON_SAGITTA_RHO__1up.root  EWK_MUON_SCALE__1down.root  EWK_MUON_SCALE__1up.root  EWK_NOMINAL.root  EWK_PRW_DATASF__1down.root  EWK_PRW_DATASF__1up.root  NonRes.root  NonRes_dd.root  Other.sh  Other_EG_RESOLUTION_ALL__1down.root  Other_EG_RESOLUTION_ALL__1up.root  Other_EG_SCALE_AF2__1down.root  (+166 more)
